feat：新增获取api接口，前端增加ajax请求

--- a/JiangMock/templates/index.html
+++ b/JiangMock/templates/index.html
@@ -17,11 +17,40 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <style>
-        .block_get{
-            border:1px solid #61affe;
+        .block_get {
+            border: 1px solid #61affe;
             background: rgba(97, 175, 254, .1);
         }
+
+        .clear {
+            clear: both;
+            height: 36px;
+        }
+
+        .cl3 {
+            height: 15px;
+        }
+
+        .cl2 {
+            line-height: 36px;
+        }
+
     </style>
+    <script>
+        $(function(){
+　　      $.get("project/all",function (data) {
+                var data = JSON.parse(data)
+                console.log(data)
+            for (var i =0;i<data.length;i++){
+                var pro_id = data[i].pro_id
+                $.get("api/"+pro_id,function (data1) {
+                    console.log(data1)
+                })
+            }
+        })
+　　
+});
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -54,11 +83,34 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+
+<div class="container">
+    <div>
+        <h1>tttttt
+            <small>jjjasd</small>
+        </h1>
+        <div class="cl1">
+            <div class="cl2 block_get clear">
+                <span class="block-method block_method_get block_method_color cl4"
+                      onclick="collapse_api('#collapse_api_1'); make_editor('code_1')">GET</span>
+
+
+                <span class="block-method block_url cl4">/test</span>
+                <span class="block-summary-description cl4">test</span>
+                <button class="btn btn-danger pull-right" style="margin-left: 5px" onclick="del_mock_api('/mocks/1/')">
+                    Del
+                </button>
+                <button class="btn btn-primary pull-right" onclick="put_mock_api('/mocks/1/')">Save</button>
+
+            </div>
+        </div>
+    </div>
+</div>
 <div class="container">
     <h1>Test
         <small>ceshi</small>
     </h1>
-    <div id="collapse_project_1">
+    <div id="collapse_project_1" class="clear">
         <div class="block block_get">
             <span class="block-method block_method_get block_method_color"
                   onclick="collapse_api('#collapse_api_1'); make_editor('code_1')">GET</span>
@@ -66,9 +118,8 @@
 
             <span class="block-method block_url">/test</span>
             <span class="block-summary-description">test</span>
-            <button class="btn btn-primary" onclick="put_mock_api('/mocks/1/')">Save</button>
-            <button class="btn btn-danger" style="margin-left: 5px" onclick="del_mock_api('/mocks/1/')">Del
-            </button>
+            <button class="btn btn-primary " onclick="put_mock_api('/mocks/1/')">Save</button>
+            <button class="btn btn-danger " style="margin-left: 5px" onclick="del_mock_api('/mocks/1/')">Del</button>
         </div>
         <div class="block_body collapse" id="collapse_api_1">
 <pre id="code_1" class="ace_editor" style="min-height: 400px"><textarea>{
