--- a/JiangMock/templates/index.html
+++ b/JiangMock/templates/index.html
@@ -37,34 +37,34 @@
 
     </style>
     <script>
-        $(function(){
+        $(function () {
             var data_div1 = ""
-　　      $.get("project/all",function (data) {
+            $.get("project/all", function (data) {
                 var data = JSON.parse(data);
                 console.log(data);
-            for (var i =0;i<data.length;i++){
-                var add_div = ""
-                add_div += '<div class="container"> <div> <h1>'+data[i].pro_name+ '<small>'+data[i].pro_desc+'</small> </h1>'
-                console.log(add_div)
-                $.get("api/"+data[i].pro_id,function (data1) {
-                    var data1 = JSON.parse(data1);
-                    console.log(data1)
-                    for (var j = 0;j<data1.length;j++){
-                        console.log(data1[j].api_url)
-                        var api_method = data1[j]._api_method
-                        add_div = add_div+'<div class="cl1"> <div class="cl2 block_get clear"> <span class="block-method block_method_get block_method_color cl4")">'+data1[j].api_method+'</span> <span class="block-method block_url cl4">'+data1[j].api_url+'</span> <span class="block-summary-description cl4">'+data1[j].api_name+'</span> <button class="btn btn-danger pull-right" style="margin-left: 5px">Del </button> <button class="btn btn-primary pull-right")">Save</button> </div> </div>'
-                        console.log(add_div)
-                    }
-                    add_div+="</div></div>"
-                    $("#heard").after(add_div)
+                for (var i = 0; i < data.length; i++) {
+                    var add_div = ""
+                    add_div += '<div class="container"> <div> <h1>' + data[i].pro_name + '<small>' + data[i].pro_desc + '</small> </h1>'
+                    console.log(add_div)
+                    $.get("api/" + data[i].pro_id, function (data1) {
+                        var data1 = JSON.parse(data1);
+                        console.log(data1)
+                        for (var j = 0; j < data1.length; j++) {
+                            console.log(data1[j].api_url)
+                            var api_method = data1[j]._api_method
+                            add_div = add_div + '<div class="cl1"> <div class="cl2 block_get clear"> <span class="block-method block_method_get block_method_color cl4")">' + data1[j].api_method + '</span> <span class="block-method block_url cl4">' + data1[j].api_url + '</span> <span class="block-summary-description cl4">' + data1[j].api_name + '</span> <button class="btn btn-danger pull-right" style="margin-left: 5px">Del </button> <button class="btn btn-primary pull-right")">Save</button> </div> </div>'
+                            console.log(add_div)
+                        }
+                        add_div += "</div></div>"
+                        $("#heard").after(add_div)
 
-                })
+                    })
 
 
-            }
-        })
-　　
-});
+                }
+            })
+
+        });
     </script>
 </head>
 <body>
@@ -92,13 +92,47 @@
             </form>
             <ul class="nav navbar-nav">
                 <!--                <li class="active"><a href="#">新增项目 <span class="sr-only">(current)</span></a></li>-->
-                <li><a href="#">新增项目 <span class="sr-only">(current)</span></a></li>
+                <li><a href="#" data-toggle="modal" data-target="#myModal">新增项目 <span
+                        class="sr-only">(current)</span></a></li>
                 <li><a href="#">新增接口</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">新增项目</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="project_name" class="col-sm-3 control-label">项目名称:</label>
+                        <div class="col-sm-8">
+                            <input type="text" value="" name="project_name" class="form-control" id="project_name"
+                                   placeholder="You Project Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="desc" class="col-sm-3 control-label">项目描述:</label>
+                        <div class="col-sm-8">
+                            <input type="text" value="" class="form-control" id="desc" name="desc"
+                                   placeholder="Description for you project">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary">保存</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="container">
     <div>
         <h1>tttttt
