--- a/JiangMock/templates/index.html
+++ b/JiangMock/templates/index.html
@@ -7,7 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
     <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -130,16 +132,16 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="desc" class="col-sm-3 control-label">项目描述:</label>
+                        <label for="project_desc" class="col-sm-3 control-label">项目描述:</label>
                         <div class="col-sm-8">
-                            <input type="text" value="" class="form-control" id="desc" name="desc">
+                            <input type="text" value="" class="form-control" id="project_desc" name="project_desc">
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-primary">保存</button>
+                <button type="button" class="btn btn-primary" id="save_pro">保存</button>
             </div>
         </div>
     </div>
@@ -167,15 +169,18 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="desc" class="col-sm-3 control-label">API描述:</label>
+                        <label for="api_method" class="col-sm-3 control-label">API方法:</label>
                         <div class="col-sm-8">
-                            <input type="text" value="" class="form-control" id="api_desc" name="desc">
+                            <select class="form-control" id="api_method">
+                                <option>GET</option>
+                                <option>POST</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="desc" class="col-sm-3 control-label">API路径:</label>
+                        <label for="api_url" class="col-sm-3 control-label">API路径:</label>
                         <div class="col-sm-8">
-                            <input type="text" value="" class="form-control" id="api_url" name="desc">
+                            <input type="text" value="" class="form-control" id="api_url" name="api_url" placeholder="路径不需要加/">
                         </div>
                     </div>
                 </form>
@@ -250,11 +255,67 @@
             var data = JSON.parse(data);
             $("#api_pro_name").empty()
             op = ""
-            for (var i=0;i<data.length;i++){
-                op += "<option "+"'pro_id'="+data[i].pro_id+">"+data[i].pro_name+"</option>"
+            for (var i = 0; i < data.length; i++) {
+                op += "<option " + "'pro_id'=" + data[i].pro_id + ">" + data[i].pro_name + "</option>"
             }
             console.log(op)
             $("#api_pro_name").append(op)
+        })
+    })
+
+    $("#save_pro").click(function () {
+        console.log("save_pro")
+        var pro_name = $("#project_name").val()
+        var pro_desc = $("#project_desc").val()
+        $.ajax({
+            type: "POST",
+            url: "/project/1",
+            data: {pro_name: pro_name, pro_desc: pro_desc},
+            dataType: "json",
+            success: function (data) {
+                console.log(data)
+                $("#project_name").empty()
+                $("#project_desc").empty()
+                swal({
+                    title: "添加成功",
+                    type: "success",
+                    confirmButtonText: "确定",
+                    closeOnConfirm: false
+                });
+                $("#myModal > div > div > div.modal-footer > button.btn.btn-default").click()
+                setTimeout(function () {
+                    window.location.reload();
+                }, 500);
+            }
+        })
+    })
+
+    $("#save_api").click(function () {
+        var api_pro_name = $("#api_pro_name").val()
+        var api_method = $("#api_method").val()
+        var api_name = $("#api_name").val()
+        var api_url = $("#api_url").val()
+        console.log(api_pro_name,api_method,api_name,api_url)
+        $.ajax({
+            type: "POST",
+            url: "/api/1",
+            data: {api_pro_name: api_pro_name, api_method: api_method,api_name:api_name,api_url:api_url},
+            dataType: "json",
+            success: function (data) {
+                console.log(data)
+                $("#api_name").empty()
+                $("#api_url").empty()
+                swal({
+                    title: "添加成功",
+                    type: "success",
+                    confirmButtonText: "确定",
+                    closeOnConfirm: false
+                });
+                $("#myModal > div > div > div.modal-footer > button.btn.btn-default").click()
+                setTimeout(function () {
+                    window.location.reload();
+                }, 500);
+            }
         })
     })
 
