--- a/JiangMock/templates/index.html
+++ b/JiangMock/templates/index.html
@@ -180,7 +180,8 @@
                     <div class="form-group">
                         <label for="api_url" class="col-sm-3 control-label">API路径:</label>
                         <div class="col-sm-8">
-                            <input type="text" value="" class="form-control" id="api_url" name="api_url" placeholder="路径不需要加/">
+                            <input type="text" value="" class="form-control" id="api_url" name="api_url"
+                                   placeholder="路径不需要加/">
                         </div>
                     </div>
                 </form>
@@ -208,10 +209,10 @@
 
                 <span class="block-method block_url cl4">{{i.api_url}}</span>
                 <span class="block-summary-description cl4">{{i.api_name}}</span>
-                <button class="btn btn-danger pull-right" style="margin-left: 5px" onclick="del_mock_api('/mocks/1/')">
+                <button class="btn btn-danger pull-right" style="margin-left: 5px" api_id={{i.api_id}}>
                     Del
                 </button>
-                <button class="btn btn-primary pull-right" onclick="put_mock_api('/mocks/1/')">Save</button>
+                <button class="btn btn-primary pull-right save-search" api_id={{i.api_id}}>Save</button>
 
             </div>
             {% endfor %}
@@ -233,7 +234,58 @@
             <span class="block-summary-description">test</span>
             <button class="btn btn-primary " onclick="put_mock_api('/mocks/1/')">Save</button>
             <button class="btn btn-danger " style="margin-left: 5px" onclick="del_mock_api('/mocks/1/')">Del</button>
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail4">请求模式</label>
+                        <select class="form-control" id="inputEmail4">
+                                <option>FORM</option>
+                                <option>JSON</option>
+                            </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputPassword4">Password</label>
+                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress2">Address 2</label>
+                    <input type="text" class="form-control" id="inputAddress2"
+                           placeholder="Apartment, studio, or floor">
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCity">City</label>
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputState">State</label>
+                        <select id="inputState" class="form-control">
+                            <option selected>Choose...</option>
+                            <option>...</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="inputZip">Zip</label>
+                        <input type="text" class="form-control" id="inputZip">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Check me out
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+            </form>
         </div>
+
         <div class="block_body collapse" id="collapse_api_1">
 <pre id="code_1" class="ace_editor" style="min-height: 400px"><textarea>{
     "method": "GET",
@@ -248,5 +300,10 @@
     </div>
 </div>
 </body>
+<script>
+    $(".save-search").click(function () {
+        console.log($(this).parent(".clear"))
+    })
+</script>
 <script src="{{url_for('static',filename = 'js/index.js')}}"></script>
 </html>
